--- a/index.html
+++ b/index.html
@@ -4,17 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Digital Guidebook (WV84B)</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="Your personal digital guidebook for a smooth stay at Watervillas 84, Bonaire" />
+    <meta name="author" content="Digital Guidebook (WV84B)" />
 
-    <meta property="og:title" content="Lovable Generated Project" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Watervillas 84 – Digital Guidebook" />
+    <meta property="og:description" content="Your personal digital guidebook for a smooth stay at Watervillas 84, Bonaire" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://wv84b.seasideserenitybonaire.com/lovable-uploads/ade981c2-b157-4f85-b799-e243dd727098.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    
   </head>
 
   <body>
